Fix off-screen menu bug

--- a/docs/src/docs.scss
+++ b/docs/src/docs.scss
@@ -426,6 +426,17 @@
       }
     }
 
+    .s-brand {
+      margin-top: -1.7rem;
+      padding: 0;
+      position: static;
+    }
+
+    .s-nav {
+      margin-top: 2rem;
+      position: static;
+    }
+
     .menu .menu-item > a {
       padding: .3rem .4rem;
     }
